--- a/style css/beranda.css
+++ b/style css/beranda.css
@@ -1,6 +1,7 @@
 
 body {
-    background-color: #d3d3d3;
+    bbackground: rgb(241,196,15);
+    background: linear-gradient(180deg, rgba(241,196,15,1) 9%, rgba(255,255,255,1) 100%);
     font-family: Arial, sans-serif;
 }
 
@@ -115,4 +116,96 @@ body {
 .footer .nav-item p {
     margin: 0;
     font-size: 12px;
+}
+
+.jumbotron{
+    padding: 2rem 1rem;
+    background-color: #f1c40f;
+}
+
+
+.search-box {
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin-top: 20px;
+}
+.search-box input {
+    width: 100%;
+    padding: 15px;
+    border: none;
+    border-radius: 4px;
+    margin-bottom: 20px;
+    font-size: 16px;
+}
+.search-box button {
+    width: 100%;
+    padding: 15px;
+    background-color: #6a1b0c;
+    border: none;
+    border-radius: 4px;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+}
+.trending {
+    margin-top: 20px;
+    font-size: 14px;
+    color: #666;
+}
+
+.category-card {
+    width: 170px;
+    height: 115px;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.7));
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    color: white;
+    font-weight: bold;
+    border-radius: 8px;
+    margin-right: 10px;
+}
+.category-card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 8px;
+}
+.category-card span {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+}
+.category-container {
+    display: flex;
+    align-items: center;
+}
+.category-container .arrow {
+    font-size: 24px;
+    margin-left: 10px;
+}
+
+.promo-banner {
+    background-color: #c0392b;
+    color: white;
+    padding: 20px;
+    border-radius: 10px;
+    /* background-image: url('https://placehold.co/1000x100/transparent/transparent?text=Background+Pattern'); */
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.promo-text {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+.promo-subtext {
+    font-size: 1rem;
+}
+.promo-icon {
+    font-size: 2rem;
 }
