--- a/style css/login.css
+++ b/style css/login.css
@@ -11,43 +11,15 @@ body{
   width: 100%;
   background: linear-gradient(115deg, #ffe839 10%, #f32a2a 90%);
 }
-.show-btn{
-  background: #fff;
-  padding: 10px 20px;
-  font-size: 20px;
-  font-weight: 500;
-  color: #3498db;
-  cursor: pointer;
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
-}
-.show-btn, .container{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-input[type="checkbox"]{
-  display: none;
-}
 .container{
-  display: none;
   background: #fff;
   width: 410px;
   padding: 30px;
   box-shadow: 0 0 8px rgba(0,0,0,0.1);
-}
-#show:checked ~ .container{
-  display: block;
-}
-.container .close-btn{
   position: absolute;
-  right: 20px;
-  top: 15px;
-  font-size: 18px;
-  cursor: pointer;
-}
-.container .close-btn:hover{
-  color: #3498db;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .container .text{
   font-size: 35px;
@@ -99,7 +71,7 @@ form .btn .inner{
   position: absolute;
   left: -100%;
   z-index: -1;
-  background: -webkit-linear-gradient(right, #56d8e4, #9f01ea, #56d8e4, #9f01ea);
+  background: -webkit-linear-gradient(right, #ffe839, #9f01ea, #ffe839, #9f01ea);
   transition: all 0.4s;
 }
 form .btn:hover .inner{
