--- a/style css/akun.css
+++ b/style css/akun.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f0f0f0;
+    background-color: #ffffff;
     font-family: Arial, sans-serif;
 }
 
@@ -10,11 +10,15 @@ body {
     text-align: center;
     font-size: 24px;
     position: relative;
+    
 }
 
 .profile {
-    background-color: #e0e0e0;
+    background: rgb(255,255,255);
+    /* background: linear-gradient(45deg, rgba(255,255,255,1) 45%, rgba(241,196,15,1) 100%); */
     padding: 20px;
+    text-align: center;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1);
     text-align: center;
 }
 
@@ -35,7 +39,7 @@ body {
 
 .menu-item {
     background-color: white;
-    padding: 10px;
+    padding: 15px;
     margin: 10px 0;
     border-radius: 10px;
     display: flex;
@@ -75,4 +79,15 @@ body {
 .footer a i {
     display: block;
     font-size: 20px;
+}
+
+.greetings {
+    text-align: center;
+}
+
+.menu-item{
+    background: rgb(255,255,255);
+    background: linear-gradient(45deg, #f8f8f8 85%, rgba(241,196,15,1) 2000%);
+    text-align: center;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1);
 }
