--- a/style css/favorit.css
+++ b/style css/favorit.css
@@ -88,4 +88,38 @@ body {
     .food-card {
         width: calc(100% - 20px); /* 1 card per row */
     }
+    
 }
+
+.footer {
+    background-color: #ffd700; /* Warna latar belakang footer */
+    padding: 10px 0; /* Padding atas dan bawah */
+    display: flex; /* Menggunakan flexbox untuk tata letak */
+    justify-content: space-around; /* Menyebar item secara merata */
+    position: fixed; /* Memperbaiki posisi footer di bagian bawah */
+ bottom: 0; /* Menempatkan footer di bagian bawah */
+    width: 100%; /* Mengatur lebar footer 100% */
+}
+
+.footer-item {
+    text-align: center; /* Menyelaraskan teks di tengah */
+}
+
+.footer-item i {
+    font-size: 24px; /* Ukuran ikon */
+    color: black; /* Warna ikon */
+}
+
+.footer-item p {
+    margin: 0; /* Menghapus margin */
+    font-size: 12px; /* Ukuran font untuk teks */
+    color: black; /* Warna teks */
+}
+
+/* Media Queries untuk Responsivitas */
+@media (max-width: 768px) {
+    .footer-item {
+        flex: 1; /* Membuat setiap item footer memiliki lebar yang sama */
+    }
+}
+
