--- a/style css/keranjang.css
+++ b/style css/keranjang.css
@@ -12,6 +12,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 10px;
 }
 
 .header h1 {
@@ -42,11 +43,12 @@ body {
 }
 
 /* Cart Message */
-.cart-message {
+/* .cart-message {
     font-size: 16px;
     color: #333;
-    margin-bottom: 20px;
-}
+    margin-bottom: 10px;
+    margin-top: 10px;
+} */
 
 /* Cart Item */
 .cart-item {
@@ -137,5 +139,5 @@ body {
 }
 
 .btn-checkout:hover {
-    background-color: #BF392A; /* Warna saat hover */
+    background-color: #6A1B1A; /* Warna saat hover */
 }
