--- a/style css/detail_menu.css
+++ b/style css/detail_menu.css
@@ -88,8 +88,8 @@ body {
 
 .btn-order {
     padding: 10px 20px;
-    background-color: #FFD700; 
-    color: #6A1B1A; 
+    background-color: #FFD700; /* Warna latar belakang */
+    color: #6A1B1A; /* Warna teks */
     border: none;
     border-radius: 30px;
     font-size: 18px;
@@ -98,7 +98,7 @@ body {
 }
 
 .btn-order:hover {
-    background-color: #BF392A; 
+    background-color: #BF392A; /* Warna saat hover */
     color: white;
 }
 
@@ -112,4 +112,20 @@ body {
     .info-box {
         max-width: 100%;
     }
+}
+
+.btn-favorite {
+    padding: 10px 20px;
+    background-color: #FFD700; /* Warna latar belakang */
+    color: #6A1B1A; /* Warna teks */
+    border: none;
+    border-radius: 30px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.btn-favorite:hover {
+    background-color: #BF392A; /* Warna saat hover */
+    color: white;
 }
