--- a/style css/favorit.css
+++ b/style css/favorit.css
@@ -1,29 +1,35 @@
+
+:root {
+    --primary-color: #8e2d16;
+}
 body {
     background-color: #f4f4f4;
 }
-.favorite-item {
-    background-color: white;
-    border-radius: 10px;
-    transition: transform 0.3s, box-shadow 0.3s;
+
+.card-restaurant {
+    height: 100%;
+    transition: transform 0.3s;
 }
-.favorite-item:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+.card-restaurant:hover {
+    transform: scale(1.05);
 }
-.favorite-item-image {
-    height: 120px;
+.btn-primary {
+    background-color: var(--primary-color);
+    border-color: var(--primary-color);
+}
+.love-icon {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    color: #747474;
+    font-size: 1.5rem;
+    transition: color 0.3s ease;
+}
+.love-icon.active {
+    color: var(--primary-color);
+}
+.card-img-top {
+    height: 200px;
     object-fit: cover;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
-.text-custom-price {
-    color: #8e2d16;
-}
-.btn-favorite {
-    background-color: #8e2d16;
-    color: white;
-}
-.btn-favorite:hover {
-    background-color: #6e1e0f;
-    color: white;
 }
