--- a/style css/pesan.css
+++ b/style css/pesan.css
@@ -29,9 +29,11 @@ body {
 }
 .message.driver {
     flex-direction: row;
+    margin-bottom: 35px;
 }
 .message.user {
     flex-direction: row-reverse;
+    margin-bottom: 35px;
 }
 .message .content {
     display: inline-block;
@@ -53,7 +55,7 @@ body {
     margin: 0 10px;
 }
 .chat-input {
-    padding: 10px;
-    background-color: #fff;
+    padding: 20px;
+    background-color: #e9e9e9;
     border-top: 1px solid #dee2e6;
 }
